[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["pyepwmorph/*"]

[project]
name = "pyepwmorph"
version = "1.0.4"
authors = [
  { name="Justin McCarty", email="mccarty.justin.f@gmail.com" },
]
description = "A python package to enable simple and easy gathering of climate model data and morphing of EPW files"
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    'bokeh == 3.2.2',
    'dask == 2023.8.1',
    'distributed == 2023.8.1',
    'gcsfs == 2023.6.0',
    'intake-esm == 2023.7.7',
    'ipykernel == 6.25.1',
    'lz4 == 4.3.2',
    'meteocalc == 1.1.0',
    'pvlib == 0.10.1',
    'pyarrow == 21.0.0',
    'skyfield == 1.46',
    'timezonefinder == 6.2.0',
    'xclim == 0.44.0',
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "bump2version>=1.0",
    "build>=0.10",
    "twine>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/justinfmccarty/pyepwmorph"
Issues = "https://github.com/justinfmccarty/pyepwmorph/issues"


