[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["pyepwmorph/*"]

[project]
name = "pyepwmorph"
version = "1.0.5"
authors = [
  { name="Justin McCarty", email="mccarty.justin.f@gmail.com" },
]
description = "A python package to enable simple and easy gathering of climate model data and morphing of EPW files"
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    # Core data processing dependencies
    'numpy>=1.20.0',
    'pandas>=1.3.0',
    'xarray>=2022.3.0',
    'dask>=2023.5.0',
    'distributed>=2023.5.0', 
    'gcsfs>=2023.5.0',
    'intake-esm>=2023.6.0',
    'xclim>=0.40.0',
    'intake>=0.6.0',
    'pyarrow>=13.0.0',
    
    # Climate data processing  
    'meteocalc>=1.1.0',
    
    # Solar calculations
    'pvlib>=0.13.0,<1.0.0',
    'timezonefinder>=6.0.0',
    'skyfield>=1.40',
    
    # Basic utilities
    'lz4>=4.0.0',
]

[project.optional-dependencies]

# Development dependencies
dev = [
    'ipykernel>=6.20.0',
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "bump2version>=1.0",
    "build>=0.10",
    "twine>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/justinfmccarty/pyepwmorph"
Issues = "https://github.com/justinfmccarty/pyepwmorph/issues"


